Rename reaction event to replyable

--- a/test/testee/test.html
+++ b/test/testee/test.html
@@ -93,7 +93,7 @@
             .on("echo", function(data) {
                 this.send("echo", data);
             })
-            .on("reaction", function(bool, reply) {
+            .on("replyable", function(bool, reply) {
                 if (bool) {
                     reply.resolve(bool);
                 } else {
