Update testee according to Atmosphere/vibe-protocol#8afb86988829ead1404efdfa4bccf77fb983a08e

--- a/test/testee/test.html
+++ b/test/testee/test.html
@@ -64,12 +64,21 @@
                     self.send("echo", data);
                 }, 10);
             })
-            .on("replyable", function(bool, reply) {
-                if (bool) {
-                    reply.resolve(bool);
-                } else {
-                    reply.reject(bool);
-                }
+            .on("rre.resolve", function(data, reply) {
+                reply.resolve(data);
+            })
+            .on("rre.reject", function(data, reply) {
+                reply.reject(data);
+            })
+            .on("sre.resolve", function(data) {
+                this.send("sre.resolve", data, function(data) {
+                    this.send("sre.done", data);
+                });
+            })
+            .on("sre.reject", function(data) {
+                this.send("sre.reject", data, null, function(data) {
+                    this.send("sre.done", data);
+                });
             });
         };
         window.onload = function() {
