Run test-browser task also in test task
But do not believe test result blindly since there are many issues in
Sauce.

--- a/test/resources/testee.html
+++ b/test/resources/testee.html
@@ -138,10 +138,13 @@
             })();
             
             var transports = [];
-            if (window.WebSocket &&
-                // Proxy lib doesn't seem to support Safari 5's WebSocket protocol, hixie-76
-                (!browser.safari || browser.vmajor >= 6 || crossOrigin)) {
-                transports.push("ws");
+            // Sauce Connect 4 doesn't support WebSocket
+            if (false) {
+                if (window.WebSocket &&
+                    // Proxy lib doesn't seem to support Safari 5's WebSocket protocol, hixie-76
+                    (!browser.safari || browser.vmajor >= 6 || crossOrigin)) {
+                    transports.push("ws");
+                }
             }
             if (window.EventSource && 
                 (!browser.safari || !crossOrigin || browser.vmajor >= 7)) {
